<resources>
    <string name="app_name">Villa Vanilia</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="previouse_orders">Orders</string>
    <string name="setting">Setting</string>
    <string name="language">Language</string>
    <string name="cart">Cart</string>
    <string name="about_us">About villa</string>
    <string name="please_login_to_continue">Please login to continue</string>
    <string name="create_new_user">Create new user ?</string>
    <string name="forget_password">Forget password</string>
    <string name="title_activity_register" translatable="false">Register</string>
    <string name="villa_vanalia">Villa Vanilla</string>
    <string name="by_creating_an_account">By creating an account , you\'ll be able to shop faster if you order.</string>
    <string name="user_name">User name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="phone">Mobile number</string>
    <string name="phone2">Mobile number 2</string>
    <string name="address">Address</string>
    <string name="register_now">Register now</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="change_password">Change password</string>
    <string name="new_password">New password</string>
    <string name="current_password">Current password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="user_information">Account information</string>
    <string name="save">Save</string>
    <string name="register">Register</string>
    <string name="total">Total :</string>
    <string name="pay_now">Checkout</string>
    <string name="price">Price</string>
    <string name="payment_method">Payment Method</string>
    <string name="how_to_pay">How to pay?</string>
    <string name="knet">Knet</string>
    <string name="paying_with_deliver">Paying with deliver</string>
    <string name="pay_by_knet">You can pay by knet</string>
    <string name="pay_in_deliver">You can pay with deliver</string>
    <string name="total_price">Total price :</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="empty_order_list">There is no previous orders</string>
    <string name="select_lagnuage">Select language :</string>
    <string name="arabic" translatable="false">العربية</string>
    <string name="english" translatable="false">English</string>
    <string name="kd">KD</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="choose_one_item_from_list">Choose one item from list</string>
    <string name="choose_items_from_list">Choose items from list</string>
    <string name="empty_cart">Your cart is empty.</string>
    <string name="back">Back</string>
    <string name="keep_cart">Keep cart</string>
    <string name="are_you_wish_to_close">Are you wish to close ?</string>
    <string name="go_back_will_be_clear_selected_items">Go Back will be clear selected items choices</string>
    <string name="order_number">Order number :</string>
    <string name="date">Date :</string>
    <string name="time">Time :</string>
    <string name="order_status">Order status :</string>
    <string name="order_details">Order Details</string>
    <string name="order_information">Order Information</string>
    <string name="products">Products</string>
    <string name="please_select_date">Please select date</string>
    <string name="please_select_time">Please select time</string>
    <string name="driver_notes">Driver notes</string>
    <string name="cart_notes">Cart notes</string>
    <string name="kitchen_notes">Kitchen notes</string>
    <string name="continue_">Continue</string>
    <string name="done">Done</string>
    <string name="delivery_time">Delivery time :</string>
    <string name="ok">Ok</string>
    <string name="please_enter_email">Please enter your email</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="error_please_try_again_later">Error, please try again later.</string>
    <string name="please_enter_user_name">Please enter your name</string>
    <string name="please_enter_your_address">Please enter your  address.</string>
    <string name="please_enter_your_phone">Please enter your telephone number</string>
    <string name="please_enter_current_password">Please enter current password</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="error_confirm_password_not_match_new_password">Error, confirm password not match new password</string>
    <string name="please_select_payment_method">Please select payment method.</string>
    <string name="error_no_internet_connection">Error, no internet connection.</string>
    <string name="api" translatable="false">http://app.villa-vanillaa.com/api/</string>
    <string name="image_link" translatable="false">http://assets.villa-vanillaa.com</string>
    <string name="login_faild">Login failed</string>
    <string name="email_register_before">Email registered before</string>
    <string name="select_place">Select Place</string>
    <string name="select_area">Select Area</string>
    <string name="block">Block</string>
    <string name="street">Street</string>
    <string name="avenue">Avenue</string>
    <string name="building">Building</string>
    <string name="floor_no">Floor No</string>
    <string name="appartment">Appartment No</string>
    <string name="please_enter">Please enter</string>
</resources>
