<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_login"
            android:title="@string/login" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_menu_wish"
            android:title="@string/previouse_orders" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_gear_wheel"
            android:title="@string/setting" />
        <item
            android:id="@+id/nav_lang"
            android:icon="@drawable/ic_menu_lang_en"
            android:title="@string/language" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_menu_cart"
            android:title="@string/cart" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/about_us" />
    </group>

</menu>
