<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".fragments.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@drawable/shopping" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Villa Vanilla"
            android:textColor="@color/green"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/please_login_to_continue"
            android:textColor="@color/greenText"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/email_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/border_edittext"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:hint="@string/email"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/password_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/border_edittext"
            android:inputType="textPassword"
            android:padding="8dp"
            android:hint="@string/password"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_margin="20dp"
            android:background="@drawable/border_buttons"/>

        <TextView
            android:id="@+id/create_new_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/create_new_user"
            android:textColor="@color/greenText"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/forget_password"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:textSize="20sp" />

    </LinearLayout>

</FrameLayout>