<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".setting.Profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/header">

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_margin="10dp"
            android:src="@drawable/ic_arrow_white" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/user_information"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/user_name_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/border_edittext"
                android:hint="@string/user_name"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/email_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/border_edittext"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/place_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/border_buttons"
                android:text="@string/select_place"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
            <Button
                android:id="@+id/area_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/border_buttons"
                android:text="@string/select_area"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/phone_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/border_edittext"
                android:hint="@string/phone"
                android:inputType="phone"
                android:padding="8dp"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/phone2_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/border_edittext"
                android:gravity="start|center_vertical"
                android:hint="@string/phone2"
                android:inputType="number"
                android:padding="8dp"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/block_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/border_edittext"
                android:gravity="start|center_vertical"
                android:hint="@string/block"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/street_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/border_edittext"
                android:gravity="start|center_vertical"
                android:hint="@string/street"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/avenue_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/border_edittext"
                android:gravity="start|center_vertical"
                android:hint="@string/avenue"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/building_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/border_edittext"
                android:gravity="start|center_vertical"
                android:hint="@string/building"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/floor_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/border_edittext"
                android:gravity="start|center_vertical"
                android:hint="@string/floor_no"
                android:inputType="number"
                android:padding="8dp"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/appartment_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/border_edittext"
                android:gravity="start|center_vertical"
                android:hint="@string/appartment"
                android:inputType="number"
                android:padding="8dp"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/updateBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/border_buttons"
                android:text="@string/save"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>