<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical"
    tools:context=".Register">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/header">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:src="@drawable/ic_arrow_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <LinearLayout
           android:orientation="vertical"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="20dp"
               android:gravity="center_horizontal"
               android:text="@string/villa_vanalia"
               android:textColor="@color/green"
               android:textSize="32sp"
               android:textStyle="bold" />

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="4dp"
               android:gravity="center_horizontal"
               android:maxLines="2"
               android:text="@string/by_creating_an_account"
               android:textColor="@color/greenText"
               android:textSize="16sp" />

           <EditText
               android:id="@+id/user_name_ed"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="20dp"
               android:layout_marginTop="20dp"
               android:layout_marginEnd="20dp"
               android:layout_marginBottom="8dp"
               android:background="@drawable/border_edittext"
               android:gravity="start|center_vertical"
               android:hint="@string/user_name"
               android:inputType="text"
               android:padding="8dp"
               android:textColor="@android:color/black"
               android:textSize="18sp" />

           <EditText
               android:id="@+id/password_ed"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="20dp"
               android:layout_marginTop="4dp"
               android:layout_marginEnd="20dp"
               android:layout_marginBottom="8dp"
               android:background="@drawable/border_edittext"
               android:gravity="start|center_vertical"
               android:hint="@string/password"
               android:inputType="textPassword"
               android:padding="8dp"
               android:textColor="@android:color/black"
               android:textSize="18sp" />

           <EditText
               android:id="@+id/confirm_password_ed"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="20dp"
               android:layout_marginTop="4dp"
               android:layout_marginEnd="20dp"
               android:layout_marginBottom="8dp"
               android:background="@drawable/border_edittext"
               android:gravity="start|center_vertical"
               android:hint="@string/confirm_password"
               android:inputType="textPassword"
               android:padding="8dp"
               android:textColor="@android:color/black"
               android:textSize="18sp" />

           <EditText
               android:id="@+id/email_ed"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="20dp"
               android:layout_marginTop="4dp"
               android:layout_marginEnd="20dp"
               android:layout_marginBottom="8dp"
               android:background="@drawable/border_edittext"
               android:gravity="start|center_vertical"
               android:hint="@string/email"
               android:inputType="textEmailAddress"
               android:padding="8dp"
               android:textColor="@android:color/black"
               android:textSize="18sp" />

           <EditText
               android:id="@+id/phone_ed"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="20dp"
               android:layout_marginTop="4dp"
               android:layout_marginEnd="20dp"
               android:layout_marginBottom="8dp"
               android:background="@drawable/border_edittext"
               android:gravity="start|center_vertical"
               android:hint="@string/phone"
               android:inputType="phone"
               android:padding="8dp"
               android:textColor="@android:color/black"
               android:textSize="18sp" />

           <EditText
               android:id="@+id/address_ed"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="20dp"
               android:layout_marginTop="4dp"
               android:layout_marginEnd="20dp"
               android:layout_marginBottom="8dp"
               android:background="@drawable/border_edittext"
               android:gravity="start|center_vertical"
               android:hint="@string/address"
               android:inputType="text"
               android:padding="8dp"
               android:textColor="@android:color/black"
               android:textSize="18sp" />

           <Button
               android:id="@+id/registerBtn"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="20dp"
               android:background="@drawable/border_buttons"
               android:text="@string/register_now"
               android:textColor="@android:color/white"
               android:textSize="20sp" />


       </LinearLayout>
   </ScrollView>





</LinearLayout>