<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.setting"
    android:background="@color/grey"
    android:layout_marginTop="20sp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/account_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:drawableEnd="@drawable/ic_arrow_blue"
            android:gravity="start"
            android:padding="14dp"
            android:text="@string/user_information"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/blue"/>

        <TextView
            android:id="@+id/change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:drawableEnd="@drawable/ic_arrow_blue"
            android:gravity="start"
            android:padding="14dp"
            android:text="@string/change_password"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/blue"/>

        <TextView
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:drawableEnd="@drawable/ic_arrow_blue"
            android:gravity="start"
            android:padding="14dp"
            android:text="@string/logout"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </LinearLayout>


</FrameLayout>