<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePassword">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/header">

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_margin="10dp"
            android:src="@drawable/ic_arrow_white"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/change_password"/>

    </LinearLayout>


    <EditText
        android:id="@+id/new_password_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/border_edittext"
        android:inputType="textPassword"
        android:padding="8dp"
        android:hint="@string/new_password"
        android:textColor="@android:color/black"
        android:textSize="18sp" />


    <EditText
        android:id="@+id/confirm_new_password_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/border_edittext"
        android:inputType="textPassword"
        android:padding="8dp"
        android:hint="@string/confirm_new_password"
        android:textColor="@android:color/black"
        android:textSize="18sp" />


    <EditText
        android:id="@+id/current_pass_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/border_edittext"
        android:inputType="textPassword"
        android:padding="8dp"
        android:hint="@string/current_password"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/changePassBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_margin="20dp"
        android:background="@drawable/border_buttons"/>

</LinearLayout>